--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+#folders to ignore
+
+#webstorm
+.idea
+
+#files to ignore
+npm-debug.log
